Bug 356245 - [Krita Animation Beta] Animation playback behaves differently when moving the brush tool on the canvas.
Summary: [Krita Animation Beta] Animation playback behaves differently when moving the...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 2.9.9
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-03 13:06 UTC by Dimi
Modified: 2016-01-01 20:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dimi 2015-12-03 13:06:11 UTC
When play-backing the animation it rarely plays at full speed without stuttering. Moving or wiggling the brush tool on the canvas helps considerably. Krita should be able to playback without slow downs.

Reproducible: Always

Steps to Reproduce:
1.Play animation
2.Move quickly the brush tool on the screen


Actual Results:  
Playback gets to full speed or close to full speed.

Expected Results:  
It shouldn't matter what the mouse is doing. Krita should always playback the animation smoothly.
Comment 1 wolthera 2015-12-03 17:09:43 UTC
Can't confirm that here. What graphics card/drivers do you have, and is it capable of OpenGL 3.0? Perhaps it's because my device does have OpenGL 3.0 available?
Comment 2 Dimi 2015-12-03 17:27:03 UTC
Yes, my graphics card should be capable of OpenGl 3.0. It's an Intel HD 3000 and it doesn't have any problems with other opengl features of Krita. 
Maybe your pc is faster and you simply don't notice a difference because it always plays at full speed. On my slower machine it makes a big difference.
Comment 3 Dmitry Kazakov 2015-12-14 14:34:57 UTC
Yes, at the moment there is a known slowdown on some slower machines. I'm going to have a look at it soon.
Comment 4 Dmitry Kazakov 2015-12-18 11:42:52 UTC
Git commit 9fda1f749e9392a644b4b71c56e5cf76ae4832bb by Dmitry Kazakov.
Committed on 18/12/2015 at 11:42.
Pushed by dkazakov into branch 'master'.

Implemented a "Drop Frames" mode for Krita and made it default option

Now you can switch on the "Drop Frames" mode in the Animation Docker
to ensure your animation is playing with the requested frame rate,
even when the GPU cannot handle this amount of data to be shown.

TODO: we still need an icon for this feature! Atm it uses "Auto Frame" icon!
CC:kimageshop@kde.org

M  +56   -6    krita/plugins/extensions/dockers/animation/animation_docker.cpp
M  +3    -0    krita/plugins/extensions/dockers/animation/animation_docker.h
M  +1    -0    krita/plugins/extensions/dockers/animation/kis_animation_utils.cpp
M  +1    -0    krita/plugins/extensions/dockers/animation/kis_animation_utils.h
M  +10   -0    krita/plugins/extensions/dockers/animation/wdg_animation.ui
M  +122  -31   krita/ui/canvas/kis_animation_player.cpp
M  +2    -2    krita/ui/canvas/kis_animation_player.h
M  +16   -1    krita/ui/kis_config.cc
M  +4    -1    krita/ui/kis_config.h
M  +14   -1    krita/ui/kis_config_notifier.cpp
M  +8    -1    krita/ui/kis_config_notifier.h

http://commits.kde.org/krita/9fda1f749e9392a644b4b71c56e5cf76ae4832bb
Comment 5 Dmitry Kazakov 2016-01-01 20:19:39 UTC
Git commit bd79d3ca3fa17c4a9e5f0a80c6265d96ca19a0a0 by Dmitry Kazakov.
Committed on 01/01/2016 at 17:47.
Pushed by dkazakov into branch 'krita-animation-pentikainen'.

Implemented a "Drop Frames" mode for Krita and made it default option

Now you can switch on the "Drop Frames" mode in the Animation Docker
to ensure your animation is playing with the requested frame rate,
even when the GPU cannot handle this amount of data to be shown.

TODO: we still need an icon for this feature! Atm it uses "Auto Frame" icon!
CC:kimageshop@kde.org

# Conflicts:
#	krita/ui/canvas/kis_animation_player.cpp
#	krita/ui/canvas/kis_animation_player.h
#	krita/ui/kis_config_notifier.cpp

M  +57   -6    krita/plugins/extensions/dockers/animation/animation_docker.cpp
M  +3    -0    krita/plugins/extensions/dockers/animation/animation_docker.h
M  +1    -0    krita/plugins/extensions/dockers/animation/kis_animation_utils.cpp
M  +1    -0    krita/plugins/extensions/dockers/animation/kis_animation_utils.h
M  +10   -0    krita/plugins/extensions/dockers/animation/wdg_animation.ui
M  +122  -29   krita/ui/canvas/kis_animation_player.cpp
M  +2    -2    krita/ui/canvas/kis_animation_player.h
M  +16   -1    krita/ui/kis_config.cc
M  +4    -1    krita/ui/kis_config.h
M  +15   -1    krita/ui/kis_config_notifier.cpp
M  +8    -1    krita/ui/kis_config_notifier.h

http://commits.kde.org/calligra/bd79d3ca3fa17c4a9e5f0a80c6265d96ca19a0a0