krita/ui/kis_config_notifier.cpp
@@ -20,11 +20,21 @@
 #include <QGlobalStatic>
 
 #include <kis_debug.h>
+#include "kis_signal_compressor.h"
 
 Q_GLOBAL_STATIC(KisConfigNotifier, s_instance)
 
-KisConfigNotifier::KisConfigNotifier()
+struct KisConfigNotifier::Private
 {
+    Private() : dropFramesModeCompressor(300, KisSignalCompressor::FIRST_ACTIVE) {}
+
+    KisSignalCompressor dropFramesModeCompressor;
+};
+
+KisConfigNotifier::KisConfigNotifier()
+    : m_d(new Private)
+{
+    connect(&m_d->dropFramesModeCompressor, SIGNAL(timeout()), SIGNAL(dropFramesModeChanged()));
 }
 
 KisConfigNotifier::~KisConfigNotifier()
@@ -42,4 +52,7 @@ void KisConfigNotifier::notifyConfigChanged(void)
     emit configChanged();
 }
 
-
+void KisConfigNotifier::notifyDropFramesModeChanged()
+{
+    m_d->dropFramesModeCompressor.start();
+}
